[project]
name = "lutrisweb"
version = "0.1.0"
description = "Lutris website (Django backend)"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "PyYAML==6.0.1",
    "ipython",
    "boto3==1.34.23",
    "celery[redis]==5.3.6",
    "cssselect==1.2.0",
    "Django==5.2.11",
    "django-axes==7.0.1",
    "django-extensions==3.2.3",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.6.0",
    "django-select2==8.4.0",
    "django-markupfield==2.0.1",
    "django-inlinecss==0.3.0",
    "django-reversion==5.1.0",
    "django-bitfield @ git+https://github.com/disqus/django-bitfield.git@17fbf76f8b331f89fd2f0bb2e4c3a4fd12c07484",
    "django-webpack-loader==1.8.1",
    "django-libs==2.0.3",
    "django-unslashed==0.3.0",
    "django-redis==5.4.0",
    "django-allauth[socialaccount,openid]==65.15.0",
    "wheel==0.40.0",
    "python3-openid",
    "requests==2.32.3",
    "mimeparse==0.1.3",
    "mock==3.0.5",
    "jsonfield==3.0.0",
    "psycopg2==2.9.10",
    "factory-boy==2.12.0",
    "sorl-thumbnail==13.0.0",
    "lxml[html_clean]==5.3.0",
    "Pillow==11.2.1",
    "premailer==3.10.0",
    "urllib3==2.2.3",
    "xpinyin==0.7.6",
    "transliterate==1.10.2",
    "GitPython==3.1.41",
    "docutils",
]

[dependency-groups]
dev = [
    "django-jenkins @ git+https://github.com/lutris/django-jenkins.git",
    "pylint==3.0.3",
    "pep8==1.7.1",
    "coverage==7.2.5",
    "ipdb==0.13.13",
    "django-debug-toolbar==5.2.0",
    "Faker",
    "rst2html",
]
prod = [
    "gunicorn",
    "setproctitle",
]

[tool.uv]
# Django app, not a library — don't try to build/install lutrisweb itself.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["*/migrations/*", "lutris_client/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "RUF"]
ignore = [
    "E501",   # Line too long — existing codebase has many, fix gradually
    "F405",   # Undefined names from star imports (settings files)
    "F403",   # Star imports (settings files)
    "B904",   # raise-without-from-inside-except — fix gradually
    "RUF005", # Collection literal concatenation — stylistic
    "RUF012", # Mutable class attributes should use ClassVar
    "RUF015", # Prefer next(iter()) over [0] — stylistic
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["accounts", "bundles", "common", "emails", "games", "hardware", "platforms", "providers", "runners", "tosec"]
